infra/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biddinggo-web-service
  namespace: biddinggo
spec:
  type: NodePort
  selector:
    app: biddinggo-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
