infra/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biddinggo-web-ingress
  namespace: biddinggo
spec:
  ingressClassName: nginx
  rules:
  - host: bidding-go.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: biddinggo-web-service
            port:
              number: 80
